--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -1,7 +1,38 @@
-.container {
-  width: 100vh;
-  text-align: center;
-  font-size: 100px;
-  color: #88f2fa;
-}
+.header-container {
+    height: 64px;
+    padding: 0 24px 0 24px;
+    background-color: rgb(63, 81, 181);
 
+    display: flex;
+    align-items: center;
+
+    .title {
+      font-size: 18px;
+      color: white;
+      padding-left: 100px;
+
+
+      &::before {
+        content: "";
+        display: block;
+        width: 44px;
+        height: 44px;
+        background: url("./ico.jpg") no-repeat;
+        background-size: cover;
+        border-radius: 50px;
+
+        cursor: pointer;
+
+        position: absolute;
+        top: 10px;
+        left: 70px;
+      }
+    }
+
+    .user-ico {
+      position: absolute;
+      right: 70px;
+
+      cursor: pointer;
+    }
+}
