--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,7 +1,26 @@
-.container {
-  width: 100vh;
-  text-align: center;
-  font-size: 100px;
-  color: #88f2fa;
+body {
+    margin: 0;
 }
 
+.index-container {
+    height: 100vh;
+    width: 100vw;
+    background-color: rgb(250,250,250);
+
+    display: flex;
+    flex-direction: column;
+
+    .main {
+        flex-grow: 1;
+
+        display: flex;
+
+        .left {
+            box-sizing: border-box;
+            height: 100%;
+            width: 240px;
+            border-right: 0.5px solid rgba(0, 0, 0, 0.12);
+        }
+    }
+
+}
