--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -1,38 +1,39 @@
 .header-container {
-    height: 64px;
-    padding: 0 24px 0 24px;
-    background-color: rgb(63, 81, 181);
+  min-height: 64px;
+  padding: 0 24px 0 24px;
+  background-color: rgb(63, 81, 181);
 
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 
-    .title {
-      font-size: 18px;
-      color: white;
-      padding-left: 100px;
+  .change-main-switch {
+    box-sizing: border-box;
+    height: 48px;
+    width: 48px;
+    padding: 9px;
+    border-radius: 24px;
 
-
-      &::before {
-        content: "";
-        display: block;
-        width: 44px;
-        height: 44px;
-        background: url("./ico.jpg") no-repeat;
-        background-size: cover;
-        border-radius: 50px;
-
-        cursor: pointer;
-
-        position: absolute;
-        top: 10px;
-        left: 70px;
-      }
-    }
-
-    .user-ico {
-      position: absolute;
-      right: 70px;
-
+    &:hover {
       cursor: pointer;
+      background-color: rgb(80, 95, 180);
     }
+  }
+
+  .title-ico {
+    margin-left: 30px;
+
+    width: 44px;
+    height: 44px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 50px;
+
+    cursor: pointer;
+  }
+
+  .title-name {
+    font-size: 18px;
+    color: white;
+    margin-left: 10px;
+  }
 }
