--- a/src/components/login/index.scss
+++ b/src/components/login/index.scss
@@ -1,33 +1,38 @@
 .login-container {
-    display: none;
-    flex-direction: column;
+    height: 100%;
+    display: flex;
     align-items: center;
+    justify-content: center;
 
-    height: 320px;
-    width: 350px;
-    background-color: white;
-    box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
-    border-radius: 4px;
+    .login-form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+        height: 300px;
+        width: 350px;
+        background-color: white;
+        box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+        border-radius: 4px;
 
-    padding: 16px 24px 24px 24px;
+        padding: 16px 24px 24px 24px;
 
-    .login {
-        margin: 20px 0 20px 0;
-    }
+        .login {
+            margin: 10px 0 5px 0;
+        }
 
-    .login-title {
-        font-size: 22px;
-    }
+        .login-title {
+            margin: 20px 0 20px 0;
+            font-size: 22px;
+        }
 
-    .login-btn{
-        button{
-            width: 150px;
+
+        .login-btn {
+            margin: 30px 0 20px 0;
+
+            button {
+                width: 150px;
+            }
         }
     }
-
 }
