feat: 删除冗余组件，优化组件嵌套关系

--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -6,21 +6,8 @@
   display: flex;
   align-items: center;
 
-  .change-main-switch {
-    box-sizing: border-box;
-    height: 48px;
-    width: 48px;
-    padding: 9px;
-    border-radius: 24px;
-
-    &:hover {
-      cursor: pointer;
-      background-color: rgb(80, 95, 180);
-    }
-  }
-
   .title-ico {
-    margin-left: 30px;
+    margin-left: 20px;
 
     width: 44px;
     height: 44px;
@@ -34,6 +21,57 @@
   .title-name {
     font-size: 18px;
     color: white;
-    margin-left: 10px;
+    margin-left: 15px;
   }
+
+  .accout {
+    flex-grow: 1;
+    height: 100%;
+
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+
+    .did-login {
+        display: flex;
+        align-items: center;
+
+        .welcome {
+            margin-right: 30px;
+
+            letter-spacing: 1px;
+            font-size: 19px;
+            color: white;
+        }
+
+        .exit {
+            padding: 2px 15px;
+            margin-right: 20px;
+            border-radius: 10px;
+
+            font-size: 16px;
+
+            cursor: pointer;
+
+            &:hover {
+                color: yellow;
+                background-color: rgb(80, 95, 180);
+            }
+        }
+    }
+
+    .user-login-btn {
+        box-sizing: border-box;
+        height: 48px;
+        width: 48px;
+        padding: 9px;
+        margin-right: 20px;
+        border-radius: 24px;
+
+        &:hover {
+            cursor: pointer;
+            background-color: rgb(80, 95, 180);
+        }
+    }
+}
 }
