--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -5,8 +5,14 @@ body {
 .index-container {
     height: 100vh;
     width: 100vw;
-    background-color: rgb(250,250,250);
+    background-color: rgb(250, 250, 250);
 
     display: flex;
     flex-direction: column;
+
+    .main {
+        flex-grow: 1;
+
+        display: flex;
+    }
 }
