feat: 实现Sider和Content组件通信

--- a/src/components/content/index.scss
+++ b/src/components/content/index.scss
@@ -11,6 +11,7 @@
         box-shadow: 0 0 9px 3px #999;
 
         P {
+            margin-left: 10px;
             font-size: 22px;
             color: blue;
         }
